--- a/_config.yml
+++ b/_config.yml
@@ -38,31 +38,12 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  #email: "someone@example.com"
-  #rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  #facebook: deanattali
+#  email: "someone@example.com"
+#  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+#  facebook: deanattali
   github: semhejazi
-  #twitter: daattali
-  #patreon: DeanAttali
-  #youtube: c/daattali
-#  medium: yourname
-#  reddit: yourname
-   linkedin: semhejazi
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-   instagram: semhejazi
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
-#  discord: invite/invite_code or users/userid 
+  linkedin: semhejazii
+  instagram: semhejazi
 #  kaggle: yourname
 
 # If you want your website to generate an RSS feed, provide a description
@@ -76,11 +57,10 @@ share-links-active:
   twitter: true
   facebook: true
   linkedin: true
-  #vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
