--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social-network-links:
 #  rss: true  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
   github: semhejazi
-  linkedin: semhejazii
+  linkedin: semhejazi
   instagram: semhejazi
 #  kaggle: yourname
 
